--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Gideon+Roman&display=swap');
 body{
     background-color: aliceblue;
-    background-image: url('background.png');
+    background-image: url('background.jpeg');
     background-size: 100%;
 }
 *{
