--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@ body{
     background-color: aliceblue;
     background-image: url('Background.png');
     background-size: 100%;
+    background-repeat: no-repeat;
+    background-position: fixed;
+    background-attachment: fixed;
 }
 *{
     margin: 0;
